--- a/package.json
+++ b/package.json
@@ -126,66 +126,66 @@
       "jest-setup.js"
     ]
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-flow": "^7.9.0",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.1.14",
-    "@storybook/addon-controls": "^6.1.14",
-    "@storybook/addon-docs": "^6.1.14",
-    "@storybook/addon-viewport": "^6.1.14",
-    "@storybook/react": "^6.1.14",
-    "@storybook/theming": "^6.1.14",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "autoprefixer": "^9",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/helper-builder-react-jsx": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-flow": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-controls": "^6.3.7",
+    "@storybook/addon-docs": "^6.3.7",
+    "@storybook/addon-viewport": "^6.3.7",
+    "@storybook/builder-webpack5": "^6.3.7",
+    "@storybook/manager-webpack5": "^6.3.7",
+    "@storybook/react": "^6.3.7",
+    "@storybook/theming": "^6.3.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
-    "concurrently": "^5.1.0",
-    "coveralls": "^3.0.11",
-    "eslint": "^7.18.0",
+    "concurrently": "^6.2.1",
+    "coveralls": "^3.1.1",
+    "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-flowtype": "^5.9.0",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^3.2.1",
+    "framer-motion": "^4.1.17",
     "husky": "^4.3.8",
     "intersection-observer": "^0.12.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.2",
-    "microbundle": "^0.13.0",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.1.2",
+    "microbundle": "^0.13.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.35",
-    "prettier": "^2.2.0",
-    "prettier-plugin-pkg": "^0.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
-    "storybook-dark-mode": "^1.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.1.3"
-  },
-  "resolutions": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.3.2",
+    "prettier-plugin-pkg": "^0.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
+    "storybook-dark-mode": "^1.0.8",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5",
+    "webpack": "^5.50.0"
   }
 }
